# The-ETH-Synthesis

./: .gitignore  AGENTS.md  ARCHITECTURE.md  BUILD_LOGIC.md  README.md  RULES_SCHEMA.json  netlify.toml  payload.json  pyproject.toml  register_payload.json  render.yaml  skill.md
app/: agent_insights_integration.py  architecture_improvements.md  cache_manager.py  enhanced_api.py  enhanced_services.py  heartbeat.py  insights_api.py  main.py  models.py  moltbook_insights.py  rule_engine.py  security.py  services.py  un_jurisdiction_api.py  un_jurisdictions.py
app/static/: app.js  demo_transactions.csv  index.html  insights.html  styles.css
docs/: MOLTBOOK_INSIGHTS.md  api.md  autonomy-rule.md  builder-guide-update-2026-03-20.md  collaboration-log.md  moltbook_post.md  partners.md  registration.md  submission-playbook.md  submission-recovery-audit.md  synthesis-publish-pack.md
docs/templates/: synthesis-project-payload.json  synthesis.local.env.template
published/skynet-publish-20260320T154740Z/: ARCHITECTURE.md  PUBLISHED_SUMMARY.md  README.md  api.md  collaboration-log.md
published/skynet-publish-20260320T161522Z/: ARCHITECTURE.md  DEMO_SCRIPT.md  PUBLISHED_SUMMARY.md  README.md
rules/: ke_2025.sample.json  ng_2025.sample.json  uk_2025.sample.json  us_2025.sample.json
samples/: demo_transactions.csv
scripts/: publish_synthesis.sh  update_synthesis.sh
tests/: test_reports.py
